h1. CHANGELOG

h2. 2.4.25 unreleased

* add 'rails-omniauth' example application to 'apps4' recipe
* set email ports to 587 instead of 25 (contributed by mazlix)

h2. 2.4.24 February 1, 2014

* fix issue with mongoid-rspec version
* fix Rolify generator
* use Markdown for README (contributed by Steve Schwartz)

h2. 2.4.23 January 30, 2014

* don't send emails in development mode (contributed by Steve Schwartz)
* new recipe 'email_dev' for mailcatcher and mail_view (contributed by Steve Schwartz)
* fixes for 'activeadmin' recipe (contributed by Steve Schwartz)
* add Foreman procfile (contributed by Steve Schwartz)
* use 'foreman run' to get ENV variables if Foreman is selected (contributed by Steve Schwartz)
* change display of recipes and preferences in README (contributed by Steve Schwartz)

h2. 2.4.22 January 28, 2014

* new recipe for 'activeadmin' or 'rails_admin' (contributed by Steve Schwartz)
* added 'foreman' as alternative to Figaro gem (contributed by Steve Schwartz)
* added postgres host config prompt (contributed by Steve Schwartz)

h2. 2.4.21 January 11, 2014

* add 'rails-devise' example application to 'apps4' recipe
* remove custom 'name' field from 'rails-devise' example application

h2. 2.4.20 January 9, 2014

* use 'rails_layout' gem to generate Devise views with CSS styling for Foundation or Bootstrap
* change commands to use 'rails_layout' gem version 1.0.0

h2. 2.4.19 January 5, 2014

* add 'rails-devise' example application
* add 'rails-foundation' example application

h2. 2.4.18 December 28, 2013

* fix for mongoid gem
* added 'createdb' flag to user creation for PostgreSQL (contributed by Tristan Lohman)
* update Mandrill API key to match Heroku style (contributed by Stephan Meyers)
* add 'unicorn-rails' gem (suggested by rceee)

h2. 2.4.17 December 15, 2013

* allow choice of front-end framework when building 'learn-rails' example
* use 'slim-rails' gem
* remove temporary Haml gems from Gemfile when Slim is selected
