@@ -13,9 +13,11 @@ sqlite_detected = gemfile.include? 'sqlite3'
 
 ## Web Server
 prefs[:dev_webserver] = multiple_choice "Web server for development?", [["WEBrick (default)", "webrick"],
-  ["Thin", "thin"], ["Unicorn", "unicorn"], ["Puma", "puma"]] unless prefs.has_key? :dev_webserver
+  ["Thin", "thin"], ["Unicorn", "unicorn"], ["Puma", "puma"], ["Phusion Passenger (Apache/Nginx)", "passenger"],
+  ["Phusion Passenger (Standalone)", "passenger_standalone"]] unless prefs.has_key? :dev_webserver
 prefs[:prod_webserver] = multiple_choice "Web server for production?", [["Same as development", "same"],
-  ["Thin", "thin"], ["Unicorn", "unicorn"], ["Puma", "puma"]] unless prefs.has_key? :prod_webserver
+  ["Thin", "thin"], ["Unicorn", "unicorn"], ["Puma", "puma"], ["Phusion Passenger (Apache/Nginx)", "passenger"],
+  ["Phusion Passenger (Standalone)", "passenger_standalone"]] unless prefs.has_key? :prod_webserver
 if prefs[:prod_webserver] == 'same'
   case prefs[:dev_webserver]
     when 'thin'
@@ -24,6 +26,10 @@ if prefs[:prod_webserver] == 'same'
       prefs[:prod_webserver] = 'unicorn'
     when 'puma'
       prefs[:prod_webserver] = 'puma'
+    when 'passenger'
+      prefs[:prod_webserver] = 'passenger'
+    when 'passenger_standalone'
+      prefs[:prod_webserver] = 'passenger_standalone'
   end
 end
 
